--- a/src/components/AboutAgency/aboutAgency.scss
+++ b/src/components/AboutAgency/aboutAgency.scss
@@ -1,120 +1,138 @@
 .about_ag_wrapper {
-	padding: 100px 80px;
-	@media screen and (max-width: 768px) {
-		padding: 100px 20px;
-	}
-	.about_ag_wrapper__content {
-		padding-right: 40px;
-		.title {
-			color: #84848C;
-			font-family: Oswald,sans-serif;
+  padding: 100px 80px;
+  .about_ag_wrapper__content {
+    padding-right: 40px;
+    .title {
+      color: #84848c;
+      font-family: Oswald, sans-serif;
 
-			font-size: 14px;
-		}
-		.subtitle {
-			margin-top: 17px;
-			margin-bottom: 50px;
-			font-size: 30px;
-			font-family: Oswald,sans-serif;
+      font-size: 14px;
+    }
+    .subtitle {
+      margin-top: 17px;
+      margin-bottom: 50px;
+      font-size: 30px;
+      font-family: Oswald, sans-serif;
+    }
+    .desc {
+      color: #84848c;
+      font-family: Oswald, sans-serif;
+      letter-spacing: 1px;
+      font-weight: 400;
+      line-height: 25px;
+      margin-bottom: 50px;
+    }
+  }
+  .images {
+    position: relative;
+    .img1 {
+      box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px,
+        rgba(17, 17, 26, 0.1) 0px 16px 56px,
+        rgba(17, 17, 26, 0.1) 0px 24px 80px;
+      position: absolute;
+      top: -50px;
+      right: 0;
+      background: transparent;
+      height: 100%;
+      overflow: hidden;
 
-		}
-		.desc {
-			color: #84848C;
-			font-family: Oswald,sans-serif;
-			letter-spacing: 1px;
-			font-weight: 400;
-			line-height: 25px;
-			margin-bottom: 50px;
-		}
-	}
-	.images {
-		position: relative;	
-		.img1 {
-			box-shadow: rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px, rgba(17, 17, 26, 0.1) 0px 24px 80px;
-			position: absolute;
-			top: -50px;
-			right: 0;
-			background: transparent;
-			height: 100%;
-			overflow: hidden;
-
-			img {
-				min-height: 100%;
-			}
-		}
-		.img2 {
-			position: relative;
-			bottom: -60px;
-			overflow: hidden;
-			img {
-			}
-		}
-		.border {
-			position: absolute;
-			top: 0;
-			bottom: -80px;
-			left: 50%;
-			transform: translateX(-50%);
-			min-width: 80%;
-			min-height: 100%;
-			border: 10px solid #E62B4A;
-		}
-
-	}
-		@media screen and (max-width: 768px) {
-			.images {
-				padding-right: 20px;
-				.img1 {
-					top: 0;
-					right: 0;
-					min-width: 100%;
-					box-shadow: 0;
-					width: 100%;
-					img {
-						min-width: 100px;
-					}
-				}
-				.img2 {
-					top: 100px;
-					width: 100%;
-					img {
-						width: 100%;
-					}
-				}
-				.border {
-					top: 70px;
-					height: 400px;
-				}
-			}
-		}
-		@media screen and (max-width: 500px) {
-			.images {
-				display: flex;
-				flex-direction: column;
-				padding: 0;
-				margin-top: 20px;
-				.img1 {
-					position: static;
-					box-shadow: none;
-					height: 300px;
-					img {
-						min-width: 100%;
-						height: 100%;
-					}
-				}
-				.img2 {
-					position: static;
-					box-shadow: none;
-					height: 300px;
-					img {
-						width: 100%;
-						height: 100%;
-
-					}
-				}
-				.border {
-					display: none;
-				}
-			}
-		}
+      img {
+        min-height: 100%;
+      }
+    }
+    .img2 {
+      position: relative;
+      bottom: -60px;
+      overflow: hidden;
+      img {
+      }
+    }
+    .border {
+      position: absolute;
+      top: 0;
+      bottom: -80px;
+      left: 50%;
+      transform: translateX(-50%);
+      min-width: 80%;
+      min-height: 100%;
+      border: 10px solid #e62b4a;
+    }
+  }
+  @media screen and (min-width: 1440px) {
+    .images {
+      .img1 {
+        right: -50px;
+      }
+      .img2 {
+        bottom: -30px;
+        left: 20%;
+      }
+      .border {
+        min-width: 50%;
+        left: 70%;
+        top: -30px;
+      }
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .images {
+      padding-right: 20px;
+      .img1 {
+        top: 0;
+        right: 0;
+        min-width: 100%;
+        box-shadow: 0;
+        width: 100%;
+        img {
+          min-width: 100px;
+        }
+      }
+      .img2 {
+        top: 100px;
+        width: 100%;
+        img {
+          width: 100%;
+        }
+      }
+      .border {
+        top: 70px;
+        height: 400px;
+      }
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .images {
+      display: flex;
+      flex-direction: column;
+      padding: 0;
+      margin-top: 20px;
+      .img1 {
+        position: static;
+        box-shadow: none;
+        height: 300px;
+        img {
+          min-width: 100%;
+          height: 100%;
+        }
+      }
+      .img2 {
+        position: static;
+        box-shadow: none;
+        height: 300px;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+      .border {
+        display: none;
+      }
+    }
+  }
+  @media screen and (max-width: 768px) {
+    padding: 100px 20px;
+  }
+  @media screen and (min-width: 1440px) {
+    padding: 100px 200px;
+  }
 }
