--- a/src/components/HeroSlider/heroslider.scss
+++ b/src/components/HeroSlider/heroslider.scss
@@ -1,92 +1,90 @@
 .hero__slider {
-	width: 100%;
-	height: 100vh;
-	position: relative;
-	z-index: 1;
-	overflow: hidden;
-	.swiper {
-		position: relative;
-		width: 100%;
-		height: 100%;
-		.swiper-slide {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+  .swiper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    .swiper-slide {
+    }
+  }
+  .slider__container {
+    position: relative;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      object-fit: cover;
+    }
+    .content {
+      width: 60%;
+      padding: 0 60px;
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .title {
+        text-align: center;
+        font-size: 20px;
+        color: #fff;
+        font-family: sans-serif;
+        font-weight: 400;
+      }
+      .desc {
+        margin: 30px 0;
+        font-size: 80px;
+        color: #fff;
+        text-align: center;
+        font-family: sans-serif;
+        cursor: pointer;
+      }
 
-		}
-	}
-	.slider__container {
-		position: relative;
-		height: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		img {
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			width: 100%;
-			height: 100%;
-			z-index: -1;
-			object-fit: cover;
-		}
-		.content {
-			width: 60%;
-			padding: 0 60px;
-			z-index: 2;
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			.title {
-				text-align: center;
-				font-size: 20px;
-				color: #fff;
-				font-family: sans-serif;
-				font-weight: 400;
-			}
-			.desc {
-				margin: 30px 0;
-				font-size: 80px;
-				color: #fff;
-				text-align: center;
-				font-family: sans-serif;
-				cursor: pointer;
-			}
-
-			@media screen and (max-width: 768px) {
-				width: 100%;
-				.title {
-
-				}
-				.desc {
-					font-size: 40px;
-				}
-			}
-		}
-	}
-		.actions {
-			position: absolute;
-			top: 0;
-			left: 0;
-			bottom: 0;
-			right: 0;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			&-btn {
-				margin: 0 50px;
-				width: 80px;
-				height: 80px;
-				background: #DDDDDD;
-				border: none;
-				outline: none;
-				cursor: pointer;
-				z-index: 2;
-				svg {
-					font-size: 25px; 
-				}
-			}
-			@media screen and (max-width: 768px) {
-				display: none;
-			}
-		}
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        .title {
+        }
+        .desc {
+          font-size: 40px;
+        }
+      }
+    }
+  }
+  .actions {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &-btn {
+      margin: 0 50px;
+      width: 80px;
+      height: 80px;
+      background: #dddddd;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      z-index: 2;
+      svg {
+        font-size: 25px;
+      }
+    }
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+  }
 }
