--- a/src/components/Services/services.scss
+++ b/src/components/Services/services.scss
@@ -1,98 +1,97 @@
 .services__container {
-	width: 100%;
-	height: 100%;
-	background: #000;
-	padding: 100px 40px;
-	.services__title {
-		width: 100%;
-		padding: 0 200px;
-		.title {
-			color: #A5293E;
-			text-align: center;
-		}
-		.subtitle {
-			color: #fff;
-			font-size: 40px;
-			font-weight: 400;
-			text-align: center;
-			margin-top: 10px;
-			margin-bottom: 20px;
-			font-family: sans-serif;
-		}
-		.desc {
-			font-weight: 600;
-			font-family: sans-serif;
-			text-align: center;
-			color: #AAAAAA;
-		}
-		@media screen and (max-width: 768px) {
-			padding: 0;
-			.subtitle {
-				font-size: 30px;
-			}
-		}
-	}
-	.content {
-		width: 100%;
-		margin-top: 60px;
-		.card {
-		  perspective: 150rem;
-		  position: relative;
-		  height: 220px;
-		  min-width: 100%;
-		  box-shadow: none;
-		  background: transparent;
-		  cursor: pointer;
-			.card-side {
-			  border: 2px solid #1B1B1B;
-			  width: 100%;
-			  height: 100%;
-			  transition: all 0.8s ease;
-			  backface-visibility: hidden;
-			  position: absolute;
-			  top: 0;
-			  left: 0;
-			  color: white;
-			  display: flex;
-			  justify-content: center;
-		      align-items: center;
-			  flex-direction: column;	
-			  	img {
-					width: 64px;
-					height: 64px;
-					margin-bottom: 17px;
-				}
-				.card__text {
-					color: #AAAAAA;
-					font-size: 18px;
-					text-align: center !important;
-					font-weight: 400;
-				    font-size: 16px;
-				    line-height: 20px;
-				    font-weight: 400;
-				    text-transform: uppercase;
-				    margin: 0;
-				    font-family: sans-serif;
-				}
-			}
-		}
+  width: 100%;
+  height: 100%;
+  background: #000;
+  padding: 100px 40px;
+  .services__title {
+    width: 100%;
+    padding: 0 200px;
+    .title {
+      color: #a5293e;
+      text-align: center;
+    }
+    .subtitle {
+      color: #fff;
+      font-size: 40px;
+      font-weight: 400;
+      text-align: center;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      font-family: sans-serif;
+    }
+    .desc {
+      font-weight: 600;
+      font-family: sans-serif;
+      text-align: center;
+      color: #aaaaaa;
+    }
+    @media screen and (max-width: 768px) {
+      padding: 0;
+      .subtitle {
+        font-size: 30px;
+      }
+    }
+  }
+  .content {
+    width: 100%;
+    margin-top: 60px;
+    .card {
+      perspective: 150rem;
+      position: relative;
+      height: 220px;
+      min-width: 100%;
+      box-shadow: none;
+      background: transparent;
+      cursor: pointer;
+      .card-side {
+        border: 2px solid #1b1b1b;
+        width: 100%;
+        height: 100%;
+        transition: all 0.8s ease;
+        backface-visibility: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        img {
+          width: 64px;
+          height: 64px;
+          margin-bottom: 17px;
+        }
+        .card__text {
+          color: #aaaaaa;
+          font-size: 18px;
+          text-align: center !important;
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 20px;
+          font-weight: 400;
+          text-transform: uppercase;
+          margin: 0;
+          font-family: sans-serif;
+        }
+      }
+    }
 
+    .card-side.back {
+      transform: rotateY(-180deg);
+      background-color: #e62b4a;
+      border: none;
+      .card__text {
+        color: #fff;
+      }
+    }
 
-		.card-side.back {
-		  transform: rotateY(-180deg);
-		  background-color: #E62B4A;
-		  border: none;
-		  .card__text {
-		  	color: #fff;
-		  }
-		}
+    .card:hover .card-side.front {
+      transform: rotateY(180deg);
+    }
 
-		.card:hover .card-side.front {
-		  transform: rotateY(180deg);
-		}
-
-		.card:hover .card-side.back {
-		  transform: rotateY(0deg);
-		}
-	}
+    .card:hover .card-side.back {
+      transform: rotateY(0deg);
+    }
+  }
 }
