--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -5,7 +5,7 @@
     position: relative;
     cursor: pointer;
     overflow: hidden;
-    transition: transform ease-in-out 0.3s;
+    transition: transform ease-in-out .8s;
 
     .img {
       height: 100%;
@@ -28,7 +28,7 @@
       flex-direction: column;
       padding: 30px;
       transform: translateX(-101%);
-      transition: transform ease-in-out 0.6s;
+      transition: transform ease-in-out .8s;
       .hashtag {
         color: #fff;
         text-transform: uppercase;
