--- a/src/layout/Footer/footer.scss
+++ b/src/layout/Footer/footer.scss
@@ -52,6 +52,7 @@ footer {
       }
     }
     .contact__section {
+
       .title {
         color: #fff;
         font-family: Oswald, sans-serif;
@@ -67,6 +68,7 @@ footer {
         letter-spacing: 1px;
         margin-bottom: 10px;
         margin-bottom: 20px;
+        padding: 0; 
       }
       .telNumber {
         color: #aaaaaa;
