--- a/src/layout/Footer/footer.scss
+++ b/src/layout/Footer/footer.scss
@@ -67,6 +67,7 @@ footer {
         letter-spacing: 1px;
         margin-bottom: 10px;
         margin-bottom: 20px;
+        padding: 0;
       }
       .telNumber {
         color: #aaaaaa;
