--- a/src/components/Services/services.scss
+++ b/src/components/Services/services.scss
@@ -9,6 +9,7 @@
     .title {
       color: #a5293e;
       text-align: center;
+      font-family: Oswald, sans-serif;
     }
     .subtitle {
       color: #fff;
@@ -17,11 +18,12 @@
       text-align: center;
       margin-top: 10px;
       margin-bottom: 20px;
-      font-family: sans-serif;
+      font-family: Oswald, sans-serif;
     }
     .desc {
       font-weight: 600;
-      font-family: sans-serif;
+      font-family: Oswald, sans-serif;
+
       text-align: center;
       color: #aaaaaa;
     }
