--- a/src/components/HeroSlider/heroslider.scss
+++ b/src/components/HeroSlider/heroslider.scss
@@ -39,16 +39,18 @@
         text-align: center;
         font-size: 20px;
         color: #fff;
-        font-family: sans-serif;
+        font-family: Oswald, sans-serif;
+
         font-weight: 400;
       }
       .desc {
         margin: 30px 0;
-        font-size: 80px;
+        font-size: 90px;
         color: #fff;
         text-align: center;
-        font-family: sans-serif;
+        font-family: Oswald, sans-serif;
         cursor: pointer;
+        letter-spacing: 4px;
       }
 
       @media screen and (max-width: 768px) {
