--- a/src/components/mainbtn/mainbtn.scss
+++ b/src/components/mainbtn/mainbtn.scss
@@ -16,7 +16,10 @@
     height: 60px;
     width: 200px;
     font-size: 16px;
-    font-family: Ubuntu;
+    font-family: Oswald, sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
   }
 
