--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -94,7 +94,7 @@ header {
       cursor: pointer;
       .icon {
         color: #fff;
-        font-size: 20px;
+        font-size: 25px;
       }
     }
     .toggle_menu {
@@ -104,7 +104,7 @@ header {
         font-size: 20px;
         color: #fff;
       }
-      @media screen and (min-width: 768px) {
+      @media screen and (min-width: 1024px) {
         display: none;
       }
     }
@@ -127,7 +127,8 @@ header.scrolled {
       cursor: pointer;
       .icon {
         color: #fff;
-        font-size: 20px;
+        svg {
+        }
       }
     }
     .toggle_menu {
